2014-03-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strspn.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strspn.c: New file:
	multiarch strspn for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strspn-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strspn-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strspn
	multiarch optimizations
	* string/strspn.c (strspn): Using macro to redefine symbol name.

2014-03-10  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncat.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strncat.c: New file:
	multiarch strncat for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strncat-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strncat-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strncat
	multiarch optimizations

2014-03-03  Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strrchr.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strrchr multiarch
	implementation.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strrchr.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strrchr-ppc64.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strrchr-power7.S: New file.
	* string/strrchr.c: Define STRRCHR.

2014-02-27  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add llround power8
	implementation.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/s_llround-power8.S: New file:
	POWER8 llround ifunc implementation.