@@ -9,7 +9,7 @@ Version 2.19.1
 
 * The following bugs are resolved with this release:
 
-  16545.
+  16545, 16683.
 
 Version 2.19
 
